# Invest

./: .gitignore  config.yaml  pyproject.toml
docs/: ROADMAP.md
scripts/: _backfill_fund_ts.py  _backfill_val_hist.py  _compare_quality.py  _ingest_delisted.py  cron-refresh.sh  dashboard.sh  deploy.sh  endday.sh  intraday-alerts.sh  premarket.sh  refresh.sh
src/ashare/: __init__.py  backtest.py  backtest_reversal.py  backtest_shortterm.py  cli.py  config.py  llm.py  portfolio.py  rebalance.py  risk.py  snapshots.py  stockeval.py
src/ashare/decision/: __init__.py  price_levels.py  rules.py
src/ashare/factors/: __init__.py  nav.py  quality.py  technical.py  valuation.py
src/ashare/ingest/: bars.py  calendar.py  fund_nav.py  fundamentals.py  instruments.py  news.py  northbound.py  tushare_bars.py  tushare_fundamentals.py  tushare_minute.py  tushare_valuation.py  valuation.py
src/ashare/jobs/: backfill.py  daily_update.py
src/ashare/notify/: alerts.py  live.py  portfolio_report.py  push.py  recommend_report.py  report.py
src/ashare/signals/: __init__.py  base.py  endday.py  health.py  index_timing.py  premarket.py  scoring.py  sector_rank.py  sentiment.py  stock_scorer.py
src/ashare/sources/: __init__.py  akshare_src.py  base.py  hexin_src.py  tencent_src.py  tushare_src.py
src/ashare/storage/: __init__.py  db.py  schema.sql
src/ashare/ui/: app.py
