[project]
name = "ashare-tool"
version = "0.1.0"
description = "A-share quant data foundation"
requires-python = ">=3.12"
dependencies = [
    "akshare>=1.18.64",
    "apscheduler>=3.11.2",
    "duckdb>=1.5.3",
    "openai>=2.41.1",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
    "tushare>=1.4.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ashare"]

[project.scripts]
ashare = "ashare.cli:main"
